--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-openai
+openai==0.28
 python-dotenv~=1.0.1
 langchain~=0.2.1
 langchain-community
 pypdf
-simple_salesforce
+simple_salesforceś
+chromadb
+tiktoken
